fix(GUI): color of the close dock button in dark mode (PR #3245)

--- a/src/renderer/assets/styles/components/settings.scss
+++ b/src/renderer/assets/styles/components/settings.scss
@@ -270,7 +270,7 @@ $setting_color: var(--color-blue);
 }
 
 [data-theme="dark"] {
-    .button_transparency_icon:not([data-css-override]) svg {
+    .button_transparency_icon svg {
         color: var(--color-primary);
         fill: var(--color-primary);
     }
@@ -278,7 +278,7 @@ $setting_color: var(--color-blue);
 
 [data-theme="system"] {
     @media (prefers-color-scheme: dark) {
-        .button_transparency_icon:not([data-css-override]) svg {
+        .button_transparency_icon svg {
             color: var(--color-primary);
             fill: var(--color-primary);
         }
